syntax = "proto3";

option csharp_namespace = "CustomerTestApp.Service";

package customerService;

message CustomerModel {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    int32 discount = 5;
    bool canBeRemoved = 6;
}

message CustomerId {
    string id = 1;
}

message Empty {}

message CustomerResponse {
    Status status = 1;
    string message = 2;
}

enum Status {
    SUCCESS = 0;
    ERROR = 1;
}

enum FilterType {
    ALL = 0;
    NAME = 1;
    EMAIL = 2;
}

message CustomerFilter {
    FilterType filterType = 1;
    string searchText = 2;
}

service CustomerManagement {
    rpc GetAllCustomers (CustomerFilter) returns (stream CustomerModel);
    rpc AddCustomer (CustomerModel) returns (CustomerResponse);
    rpc UpdateCustomer (CustomerModel) returns (CustomerResponse);
    rpc DeleteCustomer (CustomerId) returns (CustomerResponse);
}
